@@ -1,28 +1,28 @@
-validation.codeError=Invalid code
-validation.codeParentError=Parent code not specified
-validation.compare.gt=greater than
-validation.compare.gte=greater than or equal to
-validation.compare.lt=less than
-validation.compare.lte=less than or equal to
-validation.compare.and=and
-validation.comparisonError={0} must be {1}
-validation.coordinateError=Invalid coordinate
-validation.dateError=Invalid date
-validation.distanceError=This coordinate exceeds the maximum distance
-validation.externalCodeError=Invalid code
-validation.incompleteCoordinateError=Incomplete coordinate
-validation.incompleteDateError=Incomplete date
-validation.incompleteTimeError=Incomplete time
-validation.integerRangeError=Invalid range
-validation.minCount=You must specify at least {0} item(s)
-validation.maxCount=You cannot specify more than {0} item(s)
-validation.patternError=Invalid format
-validation.realRangeError=Invalid range
-validation.recordKeyUniquenessError=The record ID is not unique
-validation.requiredField=This field is required
-validation.specifiedError=Reason blank not specified
-validation.timeError=Invalid time
-validation.uniquenessError=This field is not unique
-validation.unitNotSpecifiedError=Unit not specified
-validator.taxon.missingVernacularLanguage=Language not specified
-validator.taxon.vernacularLanguageNotRequired=Language or variety not required when vernacular name is not specified
+validation.codeError=Codigo no valido
+validation.codeParentError=Codigo padre no especificado
+validation.compare.gt=mayor que
+validation.compare.gte=mayor que o igual a
+validation.compare.lt=menor que
+validation.compare.lte=menor que o igual a
+validation.compare.and=y
+validation.comparisonError={0} debe ser {1}
+validation.coordinateError=Coordenada no valida
+validation.dateError=Fecha no valida
+validation.distanceError=Esta coordenada execede la distancia maxima
+validation.externalCodeError=Codigo no valido
+validation.incompleteCoordinateError=Coordenada no valida
+validation.incompleteDateError=Fecha incompleta
+validation.incompleteTimeError=Hora incompleta
+validation.integerRangeError=Rango no valido
+validation.minCount=Debes especificar al menos {0} elemento(s)
+validation.maxCount=No se puede especificar mas de {0} elemento(s)
+validation.patternError=Formato no valido
+validation.realRangeError=Rango no valido
+validation.recordKeyUniquenessError=El ID del registro no es unico
+validation.requiredField=Este campo es obligatorio
+validation.specifiedError=Razon: vacio no especificado
+validation.timeError=Hora no valida
+validation.uniquenessError=Este campo no es unico
+validation.unitNotSpecifiedError=Unida no especificada
+validator.taxon.missingVernacularLanguage=Idioma no especificado
+validator.taxon.vernacularLanguageNotRequired=Idioma o variedad no requerida cuando el nombre comun no ha sido especificado
