@@ -3,8 +3,7 @@ package org.openforis.collect.android.collectadapter;
 import org.openforis.collect.android.util.persistence.ConnectionCallback;
 import org.openforis.collect.android.util.persistence.Database;
 import org.openforis.collect.model.NameValueEntry;
-import org.openforis.idm.metamodel.validation.LookupProvider;
-import org.openforis.idm.model.Coordinate;
+import org.openforis.collect.persistence.DatabaseLookupProvider;
 
 import java.sql.Connection;
 import java.sql.PreparedStatement;
@@ -16,37 +15,34 @@ import java.util.List;
 /**
  * @author Daniel Wiell
  */
-public class MobileDatabaseLookupProvider implements LookupProvider {
+public class MobileDatabaseLookupProvider extends DatabaseLookupProvider {
     private final Database database;
 
     public MobileDatabaseLookupProvider(Database database) {
         this.database = database;
     }
 
-    public Object lookup(String tableName, final String attribute, Object... columns) {
+    @Override
+    protected Object loadValue(String tableName, final String attribute, NameValueEntry[] filters) {
+        final List<Object> params = new ArrayList<Object>();
         final StringBuilder query = new StringBuilder("SELECT ")
                 .append(attribute)
                 .append(" FROM ").append(tableName)
                 .append(" WHERE 1 = 1 ");
-
-        NameValueEntry[] filters = NameValueEntry.fromKeyValuePairs(columns);
-        final List<Object> params = new ArrayList<Object>();
         for (NameValueEntry filter : filters) {
             String colName = filter.getKey();
-            Object value = filter.getValue();
-            if (value instanceof String)
-                value = ((String) value).trim().isEmpty() ? null : value;
             query.append(" AND ").append(colName);
-            if (value == null) {
+
+            Object value = normalizeFilterValue(filter.getValue());
+            if (value == null)
                 query.append(" IS NULL");
-            } else {
+            else {
                 query.append(" = ?");
                 params.add(value);
             }
         }
-        System.out.println(query);
 
-        Object result = database.execute(new ConnectionCallback<Object>() {
+        return database.execute(new ConnectionCallback<Object>() {
             public Object execute(Connection connection) throws SQLException {
                 PreparedStatement ps = connection.prepareStatement(query.toString());
                 for (int i = 0; i < params.size(); i++)
@@ -58,10 +54,11 @@ public class MobileDatabaseLookupProvider implements LookupProvider {
                 return result;
             }
         });
-        if (result != null) {
-            Coordinate coordinate = Coordinate.parseCoordinate(result.toString());
-            return coordinate;
-        }
-        return null;
+    }
+
+    private Object normalizeFilterValue(Object value) {
+        if (value instanceof String)
+            return ((String) value).trim().isEmpty() ? null : value;
+        return value;
     }
 }
